# go-aop-agent

./: .gitignore  NOTICE  README.md  go.mod  version.go
.github/workflows/: codeql-analysis.yml  codeql.yml  libraries-test.yml  main.yml  update-libs.yml
aop/: Args.c  Args.h  CMakeLists.txt  Inst.c  Inst.h  LDasm.h  asm.go  decode.go  decode_test.go  goX86.c  goX86.h  goX86asm.c  goX86asm.h  main.c  makefile  pinpoint.c  pinpoint.go  pinpoint.h  pinpoint_test.go  table.c  table.h  update_asm_files.sh
aop/LDasm/: LDasm.c  pinpoint.h
aop/backup/: pinpoint.c
asm/: Args.c  Args.h  CMakeLists.txt  Inst.c  Inst.h  decode.go  decode_test.go  go.mod  goX86asm.c  goX86asm.h  table.c  table.h  update_asm_files.sh
asm/testdata/: Readme.md
common/: api_test.go  pinpointCommon.go  trace.go  trace_test.go
libs/httpClient/: clientDo.go  go.mod  go.sum  hook_test.go
libs/kafka-go/: go.mod  go.sum
libs/kafkago/: go.mod  go.sum  hookAndTrampoline.go  hook_test.go  pinpoint.go
libs/mongo/: addhook.go  go.mod  go.sum  hookAndTrampoline.go  hook_test.go  pinpoint.go
libs/pinpointEtcd/: etcdClient.go  go.mod  go.sum  hook_test.go
libs/redisv8/: go.mod  go.sum  hookAndTrampoline.go  hook_test.go
libs/sql/: go.mod  go.sum  hookAndTrampoline.go  hook_test.go  pinpoint.go
libs/transport/: go.mod  go.sum  hookAndTrampoline.go  hook_test.go  pinpoint.go
libs/zk/: go.mod  go.sum  hookAndTrampoline.go  hook_test.go  pinpoint.go
middleware/echo/: echoMiddleware.go  go.mod  go.sum
middleware/echoV4/: echoMiddlewareV4.go  go.mod  go.sum
middleware/micro/: go.mod  (+2 more)
(+27 files in other folders)
